[gd_scene load_steps=23 format=3 uid="uid://belle1yaf3un7"]

[ext_resource type="Script" path="res://World/Objects/Nature/Trees/TreeObject.gd" id="1_yvhp8"]
[ext_resource type="Texture2D" uid="uid://cskwysxortyqe" path="res://Assets/Images/tree_sets/cherry/mature/tops/empty winter.png" id="2"]
[ext_resource type="Texture2D" uid="uid://cub33etxyppd4" path="res://Assets/Images/tree_sets/cherry/mature/bottom.png" id="3"]
[ext_resource type="SpriteFrames" uid="uid://detyjlgw1q0jg" path="res://Assets/Images/tree_sets/evergreen/mature/animated top.tres" id="4"]
[ext_resource type="Texture2D" uid="uid://dwnernbjstsvs" path="res://Assets/Images/tree_sets/apple/growing/4.png" id="5"]
[ext_resource type="Texture2D" uid="uid://bg13w4xh4ssgf" path="res://Assets/Images/tree_sets/cherry/mature/stump.png" id="6"]

[sub_resource type="CircleShape2D" id="25"]
radius = 47.0106

[sub_resource type="RectangleShape2D" id="21"]
size = Vector2(44, 44)

[sub_resource type="CircleShape2D" id="22"]
radius = 16.0

[sub_resource type="Animation" id="2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TreeHurtbox/treeHurtBox:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TreeSprites/TreeStump:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TreeSprites/TreeTop:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TreeSprites/TreeTop:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("TreeSprites/TreeBottom:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("TreeSprites/TreeBottom:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("TreeLeavesParticles:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(165, -4)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("TreeLeavesParticles:emitting")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("TreeChipParticles:emitting")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("TreeChipParticles:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(165, -4)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("MovementCollisionBox/movementCollisionBox:disabled")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("TreeSprites/TreeTop:visible")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("TreeSprites/AnimatedTop:visible")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="16"]
resource_name = "tree fall left"
length = 1.2
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TreeSprites/TreeTop:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(),
"points": PackedFloat32Array(),
"times": PackedFloat32Array()
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TreeSprites/TreeStump:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TreeSprites/TreeTop:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TreeSprites/TreeTop:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-8, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("TreeSprites/TreeBottom:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("TreeLeavesParticles:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-135, -20)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("TreeLeavesParticles:emitting")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(1.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("TreeChipParticles:emitting")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(1.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("TreeChipParticles:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-135, -20)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("TreeSprites/TreeTop:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("TreeSprites/AnimatedTop:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="8"]
resource_name = "tree fall right"
length = 1.2
step = 0.01
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TreeSprites/TreeTop:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(),
"points": PackedFloat32Array(),
"times": PackedFloat32Array()
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TreeSprites/TreeStump:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TreeSprites/TreeTop:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TreeSprites/TreeTop:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.01, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(8, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("TreeSprites/TreeBottom:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.74),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("TreeLeavesParticles:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(135, -20)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("TreeLeavesParticles:emitting")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(1.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("TreeChipParticles:emitting")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(1.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("TreeChipParticles:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(135, -20)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("TreeSprites/TreeTop:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("TreeSprites/AnimatedTop:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="17"]
resource_name = "tree hit left"
length = 0.6
step = 0.005
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TreeSprites/AnimatedTop:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.075, 0.25, 0.4, 0.55, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -6.0, 4.0, -3.0, 2.0, 0.0]
}

[sub_resource type="Animation" id="10"]
resource_name = "tree hit right"
length = 0.6
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TreeSprites/AnimatedTop:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.075, 0.25, 0.4, 0.55, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 6.0, -4.0, 3.0, -2.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hbkdb"]
_data = {
"RESET": SubResource("2"),
"tree fall left": SubResource("16"),
"tree fall right": SubResource("8"),
"tree hit left": SubResource("17"),
"tree hit right": SubResource("10")
}

[sub_resource type="Animation" id="14"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TreeSprites/TreeStump:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TreeSprites/TreeStump:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}

[sub_resource type="Animation" id="24"]
resource_name = "sapling destroyed"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TreeHurtbox/treeHurtBox:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TreeSprites/TreeSapling:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MovementCollisionBox/movementCollisionBox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="23"]
resource_name = "sapling hit"
length = 0.6
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TreeSprites/TreeSapling:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.075, 0.25, 0.4, 0.55, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(3, 0), Vector2(-2, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="13"]
resource_name = "stump destroyed"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TreeSprites/TreeStump:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MovementCollisionBox/movementCollisionBox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TreeHurtbox/treeHurtBox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="12"]
resource_name = "stump hit right"
length = 0.6
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TreeSprites/TreeStump:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.075, 0.25, 0.4, 0.55, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-3, 0), Vector2(2, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6sk8x"]
_data = {
"RESET": SubResource("14"),
"sapling destroyed": SubResource("24"),
"sapling hit": SubResource("23"),
"stump destroyed": SubResource("13"),
"stump hit right": SubResource("12")
}

[sub_resource type="CanvasItemMaterial" id="18"]
particles_animation = true
particles_anim_h_frames = 12
particles_anim_v_frames = 1
particles_anim_loop = false

[node name="TreeObject" type="Area2D"]
modulate = Color(1.3, 1.3, 1.3, 1)
collision_layer = 0
collision_mask = 131072
script = ExtResource("1_yvhp8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("25")

[node name="TreeSprites" type="Node2D" parent="."]
position = Vector2(0, -18)
scale = Vector2(2.75, 2.75)

[node name="TreeStump" type="Sprite2D" parent="TreeSprites"]
texture = ExtResource("6")
offset = Vector2(0, -30)

[node name="TreeBottom" type="Sprite2D" parent="TreeSprites"]
texture = ExtResource("3")
offset = Vector2(0, -30)
region_rect = Rect2(160, 320, 0, 0)

[node name="TreeTop" type="Sprite2D" parent="TreeSprites"]
visible = false
texture = ExtResource("2")
offset = Vector2(0, -30)

[node name="AnimatedTop" type="AnimatedSprite2D" parent="TreeSprites"]
sprite_frames = ExtResource("4")
frame = 10
offset = Vector2(-1, -17)

[node name="Tween" type="Tween" parent="TreeSprites"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
editor_description = ""
script = null

[node name="TreeSapling" type="Sprite2D" parent="TreeSprites"]
visible = false
texture = ExtResource("5")
offset = Vector2(0, -30)

[node name="TreeHurtbox" type="Area2D" parent="."]
position = Vector2(0, 6)
collision_layer = 262152
collision_mask = 0

[node name="treeHurtBox" type="CollisionShape2D" parent="TreeHurtbox"]
rotation = -1.5708
shape = SubResource("21")

[node name="MovementCollisionBox" type="StaticBody2D" parent="."]
position = Vector2(0, 6)
collision_layer = 35

[node name="movementCollisionBox" type="CollisionShape2D" parent="MovementCollisionBox"]
shape = SubResource("22")

[node name="AnimationPlayerTree" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hbkdb")
}

[node name="AnimationPlayerStump" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6sk8x")
}

[node name="SoundEffectsTree" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -11)
volume_db = -12.0

[node name="SoundEffectsStump" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -11)
volume_db = -12.0

[node name="TreeLeavesParticles" type="CPUParticles2D" parent="."]
material = SubResource("18")
position = Vector2(165, -4)
emitting = false
amount = 36
lifetime = 1.2
one_shot = true
explosiveness = 1.0
emission_shape = 2
emission_sphere_radius = 1.0
direction = Vector2(0, -1)
gravity = Vector2(0, 80)

[node name="TreeChipParticles" type="CPUParticles2D" parent="."]
position = Vector2(165, -4)
emitting = false
amount = 14
lifetime = 1.2
one_shot = true
explosiveness = 1.0
emission_shape = 2
emission_sphere_radius = 1.0
direction = Vector2(0, -1)
gravity = Vector2(0, 80)

[node name="TreeTopArea" type="Area2D" parent="."]
position = Vector2(0, -11)
collision_layer = 4096
collision_mask = 0

[node name="oak" type="CollisionPolygon2D" parent="TreeTopArea"]
visible = false
polygon = PackedVector2Array(12, -8, 11, -58, 56, -89, 55.5556, -147.889, 0, -173.444, -62.2222, -149, -61, -85, -14, -58, -14, -8)
disabled = true

[node name="spruce" type="CollisionPolygon2D" parent="TreeTopArea"]
visible = false
polygon = PackedVector2Array(10, -9, 10, -54, 50, -85.6667, 48, -150, 0, -169, -51.1111, -150.111, -51.1111, -89, -13, -53, -14, -8)
disabled = true

[node name="birch" type="CollisionPolygon2D" parent="TreeTopArea"]
visible = false
polygon = PackedVector2Array(10, -15.6667, 9, -57, 61, -109, 60, -185, 36.6667, -196.778, -1.11111, -201.222, -41.1111, -195.667, -54, -178, -51.1111, -127.889, -60, -95.6667, -40, -73.4445, -17.7778, -71.2222, -13.3333, -14.5556)
disabled = true

[node name="evergreen" type="CollisionPolygon2D" parent="TreeTopArea"]
visible = false
position = Vector2(2.22222, -0.111112)
polygon = PackedVector2Array(-5.55554, -6.77777, 5.55556, -6.77778, 26.6667, -23.3333, 44.4444, -68.8889, -2.22222, -132.222, -47.7778, -68.8889, -32.2222, -25.5556)
disabled = true

[node name="pine" type="CollisionPolygon2D" parent="TreeTopArea"]
visible = false
polygon = PackedVector2Array(8.88889, -10.1111, 9, -43, 30, -37, 39, -58, 18.8889, -115.667, 0, -142.333, -20, -117.889, -33, -61, -31, -35, -9, -40, -13.3333, -10.1111)
disabled = true

[node name="pear" type="CollisionPolygon2D" parent="TreeTopArea"]
visible = false
polygon = PackedVector2Array(-11, -3, 8, -3, 8, -37, 49, -46, 61, -71, 49, -124, 32, -146, 4, -160, -25, -146, -46, -124, -50, -92, -52, -60, -41, -43, -11, -37)
disabled = true

[node name="apple" type="CollisionPolygon2D" parent="TreeTopArea"]
visible = false
polygon = PackedVector2Array(-11, -9, 7, -9, 7, -41, 33, -54, 45, -72, 45, -97, 37, -114, 26, -121, 2, -128, -24, -121, -37, -100, -41, -83, -36, -66, -25, -53, -11, -43)
disabled = true

[node name="cherry" type="CollisionPolygon2D" parent="TreeTopArea"]
visible = false
polygon = PackedVector2Array(-11, -10, 6, -10, 5, -40, 27, -51, 39, -70, 39, -92, 29, -107, 0, -114, -30, -102, -36, -87, -34, -73, -30, -57, -22, -49, -11, -42)
disabled = true

[node name="plum" type="CollisionPolygon2D" parent="TreeTopArea"]
visible = false
polygon = PackedVector2Array(-11, -10, 6, -10, 5, -40, 27, -51, 41, -82, 45, -111, 37, -142, 6, -161, -32, -138, -41, -109, -34, -73, -30, -57, -22, -49, -11, -42)
disabled = true

[node name="RandomLeavesFallingTimer" type="Timer" parent="."]
autostart = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
visible = false
position = Vector2(-2.22222, -78.8889)
scale = Vector2(10.1667, 13.6111)

[node name="ResetTempHealthTimer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="area_entered" from="TreeHurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_entered" from="TreeTopArea" to="." method="_on_TreeTopArea_area_entered"]
[connection signal="area_exited" from="TreeTopArea" to="." method="_on_TreeTopArea_area_exited"]
[connection signal="timeout" from="RandomLeavesFallingTimer" to="." method="_on_RandomLeavesFallingTimer_timeout"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="ResetTempHealthTimer" to="." method="_on_ResetTempHealthTimer_timeout"]
